Prevent <main> from being flex-wraped.

--- a/style/main.css
+++ b/style/main.css
@@ -511,6 +511,10 @@ body {
     flex-wrap: wrap;
 }
 
+header, main {
+     flex: 1;
+}
+
 footer {
     flex: 0 0 100%;
     margin-top: 5em;
